force-app/main/default/objects/NEILON__File__c/NEILON__File__c.object-meta.xml
<CustomObject>
    <description>After adding file in Amazon S3, S3-File will be created for that file. Later S3-File record will be used to download the file from Amazon S3.</description>
    <label>S3-File</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S3-Files</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>