force-app/main/default/objects/NEILON__File__c/fields/NEILON__Access_Type__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Access_Type__c</fullName>
    <description>Download type of the file.</description>
    <inlineHelpText>If &quot;Private&quot;, only file owner or users with Modify All access on S3-File will be able to view / download the file.</inlineHelpText>
    <label>File Download / View Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
                <default>true</default>
                <label>Public</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>