force-app/main/default/objects/NEILON__File__c/fields/NEILON__Allow_to_Copy_Move__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Allow_to_Copy_Move__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, all users who have access for this file, can copy or move file into another folder.</description>
    <inlineHelpText>If true, all users who have access for this file, can copy or move file into another folder.</inlineHelpText>
    <label>Allow copy &amp; move?</label>
    <type>Checkbox</type>
</CustomField>