force-app/main/default/objects/NEILON__File__c/fields/NEILON__Allow_to_Email__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Allow_to_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, users can send this file as an email attachment.</description>
    <inlineHelpText>If true, users can send this file as an email attachment.</inlineHelpText>
    <label>Allow to Email?</label>
    <type>Checkbox</type>
</CustomField>