force-app/main/default/objects/NEILON__File__c/fields/NEILON__Amazon_File_Path__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Amazon_File_Path__c</fullName>
    <description>Salesforce path for folder hierarchy.</description>
    <formula>IF(ISBLANK(NEILON__Folder__r.NEILON__Amazon_File_Path__c) , NEILON__Salesforce_Unique_Number__c , NEILON__Folder__r.NEILON__Amazon_File_Path__c&amp;&quot;/&quot;&amp; NEILON__Salesforce_Unique_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce File Path</label>
    <type>Text</type>
</CustomField>