force-app/main/default/objects/NEILON__File__c/fields/NEILON__Amazon_File_Path_With_Bucket__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Amazon_File_Path_With_Bucket__c</fullName>
    <formula>NEILON__Bucket_Name__c&amp;&quot;/&quot;&amp;IF(ISBLANK(NEILON__Folder__r.NEILON__Amazon_File_Path__c),  NEILON__Salesforce_Unique_Number__c , NEILON__Folder__r.NEILON__Amazon_File_Path__c&amp;&quot;/&quot;&amp; NEILON__Salesforce_Unique_Number__c)</formula>
    <label>Salesforce File Path With Bucket</label>
    <type>Text</type>
</CustomField>