force-app/main/default/objects/NEILON__File__c/fields/NEILON__Contact__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>