force-app/main/default/objects/NEILON__File__c/fields/NEILON__Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Content_Document_Id__c</fullName>
    <description>Id of Content Document for which file is created.</description>
    <inlineHelpText>Id of Content Document for which file is created.</inlineHelpText>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>