force-app/main/default/objects/NEILON__File__c/fields/NEILON__Content_Encoding__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Content_Encoding__c</fullName>
    <label>Content Encoding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>blob</fullName>
                <default>true</default>
                <label>blob</label>
            </value>
            <value>
                <fullName>base64</fullName>
            </value>
            <value>
                <fullName>encrypted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>