force-app/main/default/objects/NEILON__File__c/fields/NEILON__Description__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Description__c</fullName>
    <description>Description fo file.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>