force-app/main/default/objects/NEILON__File__c/fields/NEILON__File_Downloads__c.field-meta.xml
<CustomField>
    <fullName>NEILON__File_Downloads__c</fullName>
    <description>Total numbers of file views / downloads.</description>
    <inlineHelpText>Total numbers of file views / downloads.</inlineHelpText>
    <label>Number of Views / Downloads</label>
    <summaryForeignKey>NEILON__File_Download_History__c.NEILON__File__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>