force-app/main/default/objects/NEILON__File__c/fields/NEILON__File_Presigned_URL__c.field-meta.xml
<CustomField>
    <fullName>NEILON__File_Presigned_URL__c</fullName>
    <description>Amazon Presigned URL to download file.</description>
    <inlineHelpText>Amazon Presigned URL to download file.</inlineHelpText>
    <label>Download URL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>