force-app/main/default/objects/NEILON__File__c/fields/NEILON__Last_Accessed_By__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Last_Accessed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Accessed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>S3_Files3</relationshipName>
    <type>Lookup</type>
</CustomField>