force-app/main/default/objects/NEILON__File__c/fields/NEILON__Last_Accessed_Date__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Last_Accessed_Date__c</fullName>
    <label>Last Accessed Date</label>
    <type>DateTime</type>
</CustomField>