force-app/main/default/objects/NEILON__File__c/fields/NEILON__Last_Replaced_By__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Last_Replaced_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who has last uploaded this file content.</description>
    <inlineHelpText>The user who has last uploaded this file content.</inlineHelpText>
    <label>Last Uploaded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>