force-app/main/default/objects/NEILON__File__c/fields/NEILON__Lead__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead Id to which file will be linked.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>