force-app/main/default/objects/NEILON__File__c/fields/NEILON__Presigned_URL_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Presigned_URL_Expire_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Presigned URL Expiry Date</label>
    <type>Date</type>
</CustomField>