force-app/main/default/objects/NEILON__File__c/fields/NEILON__Presigned_URL_Frequency__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Presigned_URL_Frequency__c</fullName>
    <description>Presigned URL for file will be resetted as per this frequency.</description>
    <inlineHelpText>Presigned URL for file will be resetted as per this frequency.</inlineHelpText>
    <label>Presigned URL Reset Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Every Day</fullName>
            </value>
            <value>
                <fullName>Every 2 Days</fullName>
            </value>
            <value>
                <fullName>Every 3 Days</fullName>
            </value>
            <value>
                <fullName>Every 4 Days</fullName>
            </value>
            <value>
                <fullName>Every 5 Days</fullName>
            </value>
            <value>
                <fullName>Every 6 Days</fullName>
            </value>
            <value>
                <fullName>Every Week</fullName>
                <default>true</default>
                <label>Every Week</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>