force-app/main/default/objects/NEILON__File__c/fields/NEILON__Restoration_Started_By__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Restoration_Started_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Restoration Started By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>S3_Files2</relationshipName>
    <type>Lookup</type>
</CustomField>