force-app/main/default/objects/NEILON__File__c/fields/NEILON__S3_Link_Deleted__c.field-meta.xml
<CustomField>
    <fullName>NEILON__S3_Link_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked means S3-File has been moved to S3-Link Recycle Bin</description>
    <inlineHelpText>If checked means S3-File has been moved to S3-Link Recycle Bin</inlineHelpText>
    <label>S3-Link Deleted</label>
    <type>Checkbox</type>
</CustomField>