force-app/main/default/objects/NEILON__File__c/fields/NEILON__S3_Link_Deleted_Date__c.field-meta.xml
<CustomField>
    <fullName>NEILON__S3_Link_Deleted_Date__c</fullName>
    <description>The date and time when the S3-File was moved to S3-Link Recycle Bin.</description>
    <inlineHelpText>The date and time when the S3-File was moved to S3-Link Recycle Bin.</inlineHelpText>
    <label>S3-Link Deleted Date</label>
    <type>DateTime</type>
</CustomField>