force-app/main/default/objects/NEILON__File__c/fields/NEILON__Salesforce_Unique_Number__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Salesforce_Unique_Number__c</fullName>
    <description>Unique Number generated for File by Salesforce.</description>
    <displayFormat>{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Salesforce Unique Number</label>
    <type>AutoNumber</type>
</CustomField>