force-app/main/default/objects/NEILON__File__c/fields/NEILON__Solution__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Solution Id to which file will be linked.</description>
    <label>Solution</label>
    <referenceTo>Solution</referenceTo>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>