force-app/main/default/objects/NEILON__File__c/fields/NEILON__User__c.field-meta.xml
<CustomField>
    <fullName>NEILON__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>S3_Files</relationshipName>
    <type>Lookup</type>
</CustomField>