force-app/main/default/objects/NEILON__File__c/validationRules/NEILON__File_Extension_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NEILON__File_Extension_Validation</fullName>
    <active>false</active>
    <description>File Extension cannot be updated once file get created.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(  NEILON__Extension__c ))</errorConditionFormula>
    <errorDisplayField>NEILON__Extension__c</errorDisplayField>
    <errorMessage>Extension cannot be updated manually. Its a system generated field.</errorMessage>
</ValidationRule>