force-app/main/default/objects/NEILON__File__c/validationRules/NEILON__File_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NEILON__File_Name_Validation</fullName>
    <active>true</active>
    <description>The file name cannot contain special characters  &quot;/&quot; and &quot;?&quot;.</description>
    <errorConditionFormula>OR(CONTAINS( Name , &quot;/&quot;), CONTAINS( Name , &quot;?&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The file name cannot contain special characters  &quot;/&quot; and &quot;?&quot;.</errorMessage>
</ValidationRule>