force-app/main/default/objects/NEILON__File__c/validationRules/NEILON__Folder_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NEILON__Folder_Validation</fullName>
    <active>true</active>
    <description>Folder cannot updated manually.</description>
    <errorConditionFormula>AND(NOT(NEILON__System_Update__c), NOT(ISNEW()), ISCHANGED( NEILON__Folder__c ))</errorConditionFormula>
    <errorDisplayField>NEILON__Folder__c</errorDisplayField>
    <errorMessage>Folder cannot be updated manually. Its a system generated field.</errorMessage>
</ValidationRule>