force-app/main/default/objects/NEILON__File__c/listViews/NEILON__All.listView-meta.xml
<ListView>
    <fullName>NEILON__All</fullName>
    <columns>NAME</columns>
    <columns>NEILON__Category__c</columns>
    <columns>NEILON__Description__c</columns>
    <columns>NEILON__Folder__c</columns>
    <columns>NEILON__Size_Text__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>